--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,8 @@ spring:
 mybatis:
   type-aliases-package: com.example.postproject
   mapper-locations: classpath:mapper/*.xml
+
+logging:
+  level:
+    org.mybatis: DEBUG
+    org.apache.ibatis: DEBUG
