--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: PostProject
 
+#  jackson:
+#    property-naming-strategy: SNAKE_CASE
+
   datasource:
     url: jdbc:mariadb://localhost:3306/post_project
     username: root
@@ -12,6 +15,9 @@ spring:
 mybatis:
   type-aliases-package: com.example.postproject
   mapper-locations: classpath:mapper/*.xml
+
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 logging:
   level:
