--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 #    property-naming-strategy: SNAKE_CASE
 
   datasource:
-    url: jdbc:mariadb://localhost:3306/post_project
+    url: jdbc:mariadb://localhost:3306/post_project?characterEncoding=utf8mb4&useUnicode=true
     username: root
     password: qwe123
     driver-class-name: org.mariadb.jdbc.Driver
