--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,27 @@ jobs:
           java-version: '21'
           cache: gradle
 
+      - name: 🔧 Set environment variables
+        run: |
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> $GITHUB_ENV
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> $GITHUB_ENV
+          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> $GITHUB_ENV
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
+          echo "SPRING_PROFILES_ACTIVE=prod" >> $GITHUB_ENV
+
       - name: ⚙️ Grant execute permission for Gradle
         run: chmod +x gradlew
 
       - name: 📦 Build project
-        run: ./gradlew build
+        run: SPRING_PROFILES_ACTIVE=prod ./gradlew build
+        env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          SPRING_PROFILES_ACTIVE: prod
 
       # - name: 🧪 Run tests
       #   run: ./gradlew test
