--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
 
   #  jackson:
 #    property-naming-strategy: SNAKE_CASE
+  #github action test
 
   datasource:
     url: jdbc:mariadb://localhost:3306/post_project?characterEncoding=utf8mb4&useUnicode=true
